<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>chooseCustomerDialogClass</class>
 <widget class="QDialog" name="chooseCustomerDialogClass">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>813</width>
    <height>268</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>chooseCustomerDialog</string>
  </property>
  <widget class="QWidget" name="layoutWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>802</width>
     <height>226</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="refreshButton">
        <property name="text">
         <string>Odśwież</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="sortLabel">
        <property name="text">
         <string>Sortowanie:</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QComboBox" name="sortBox">
        <property name="minimumSize">
         <size>
          <width>100</width>
          <height>0</height>
         </size>
        </property>
        <item>
         <property name="text">
          <string>Imię A - Z</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Imię Z - A</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Nazwisko A - Z</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Nazwisko Z - A</string>
         </property>
        </item>
       </widget>
      </item>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Orientation::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QPushButton" name="okButton">
        <property name="text">
         <string>OK</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item row="1" column="0">
     <widget class="QTableWidget" name="customerTable">
      <property name="minimumSize">
       <size>
        <width>700</width>
        <height>0</height>
       </size>
      </property>
      <column>
       <property name="text">
        <string>Imię</string>
       </property>
      </column>
      <column>
       <property name="text">
        <string>Nazwisko</string>
       </property>
      </column>
      <column>
       <property name="text">
        <string>Numer Telefonu</string>
       </property>
      </column>
      <column>
       <property name="text">
        <string>Adres</string>
       </property>
      </column>
     </widget>
    </item>
   </layout>
  </widget>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections>
  <connection>
   <sender>okButton</sender>
   <signal>clicked()</signal>
   <receiver>chooseCustomerDialogClass</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>777</x>
     <y>12</y>
    </hint>
    <hint type="destinationlabel">
     <x>653</x>
     <y>11</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
